Blender 2.8 Crashes on saving an image #49961

Closed
opened 2016-11-08 02:50:27 +01:00 by Aaron Carlisle · 13 comments
Member

System Information
Windows 10
Intel HD 4600

Blender Version
Broken: Blender 2.8 5abf1a4 vc14

Short description of error
Blender 2.8 Crashes on saving an image:

# Blender 2.78 (sub 1), Commit date: 2016-11-07 19:07, Hash 5abf1a4

# backtrace
25: BLI_system_backtrace - 0x866304B0
24: sig_handle_crash_backtrace - 0x84EB42B0
23: sig_handle_crash - 0x84EB4300
22: windows_exception_handler - 0x84EB4580
21: UnhandledExceptionFilter - 0xD9165E50
20: memset - 0xDBE9B740
19: _C_specific_handler - 0xDBE858C0
18: _chkstk - 0xDBE99810
17: RtlImageNtHeaderEx - 0xDBE38250
16: KiUserExceptionDispatcher - 0xDBE98A10
15: ED_space_image - 0x84F69940
14: save_image_doit - 0x84F76E10
13: image_save_as_exec - 0x84F78160
12: wm_handler_fileselect_do - 0x84ED6B70
11: wm_handler_fileselect_call - 0x84ED7140
10: wm_handlers_do_intern - 0x84ED73E0
9: wm_handlers_do - 0x84ED7E40
8: wm_event_do_handlers - 0x84ED20A0
7: WM_main - 0x84EB4F10
6: main - 0x84EADA00
5: invoke_main - 0x8AEA07E0
4: __scrt_common_main_seh - 0x8AEA0590
3: __scrt_common_main - 0x8AEA0570
2: mainCRTStartup - 0x8AEA0830
1: BaseThreadInitThunk - 0xD9DC8350
0: RtlUserThreadStart - 0xDBE55E70

Exact steps for others to reproduce the error
run blender 2.8 render image and try to save it

**System Information** Windows 10 Intel HD 4600 **Blender Version** Broken: Blender 2.8 5abf1a4 vc14 **Short description of error** Blender 2.8 Crashes on saving an image: ``` # Blender 2.78 (sub 1), Commit date: 2016-11-07 19:07, Hash 5abf1a4 # backtrace 25: BLI_system_backtrace - 0x866304B0 24: sig_handle_crash_backtrace - 0x84EB42B0 23: sig_handle_crash - 0x84EB4300 22: windows_exception_handler - 0x84EB4580 21: UnhandledExceptionFilter - 0xD9165E50 20: memset - 0xDBE9B740 19: _C_specific_handler - 0xDBE858C0 18: _chkstk - 0xDBE99810 17: RtlImageNtHeaderEx - 0xDBE38250 16: KiUserExceptionDispatcher - 0xDBE98A10 15: ED_space_image - 0x84F69940 14: save_image_doit - 0x84F76E10 13: image_save_as_exec - 0x84F78160 12: wm_handler_fileselect_do - 0x84ED6B70 11: wm_handler_fileselect_call - 0x84ED7140 10: wm_handlers_do_intern - 0x84ED73E0 9: wm_handlers_do - 0x84ED7E40 8: wm_event_do_handlers - 0x84ED20A0 7: WM_main - 0x84EB4F10 6: main - 0x84EADA00 5: invoke_main - 0x8AEA07E0 4: __scrt_common_main_seh - 0x8AEA0590 3: __scrt_common_main - 0x8AEA0570 2: mainCRTStartup - 0x8AEA0830 1: BaseThreadInitThunk - 0xD9DC8350 0: RtlUserThreadStart - 0xDBE55E70 ``` **Exact steps for others to reproduce the error** run blender 2.8 render image and try to save it
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Author
Member

I also want to note that color management is messed up in 2.8.

I also want to note that color management is messed up in 2.8.

Added subscriber: @Almisuifre

Added subscriber: @Almisuifre
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @dfelinto

Added subscriber: @dfelinto

backtrace:

==31845==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000028 (pc 0x558ba55adbd8 bp 0x7ffcd34a2fa0 sp 0x7ffcd34a2f90 T0)
    - 0 0x558ba55adbd7 in ED_space_image /home/guest/src/blender/blender/source/blender/editors/space_image/image_edit.c:60
    - 1 0x558ba55bc0f9 in save_image_doit /home/guest/src/blender/blender/source/blender/editors/space_image/image_ops.c:1784
    - 2 0x558ba55bdd66 in image_save_as_exec /home/guest/src/blender/blender/source/blender/editors/space_image/image_ops.c:2043
    - 3 0x558ba54a451e in wm_handler_fileselect_do /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1856
    - 4 0x558ba54a4eae in wm_handler_fileselect_call /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1940
    - 5 0x558ba54a5b04 in wm_handlers_do_intern /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2064
    - 6 0x558ba54a67e9 in wm_handlers_do /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2207
    - 7 0x558ba54a8027 in wm_event_do_handlers /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2480
    - 8 0x558ba548b0ba in WM_main /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm.c:489
    - 9 0x558ba54819f5 in main /home/guest/src/blender/blender/source/creator/creator.c:525
    - 10 0x7fc5088c72b0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x202b0)
    - 11 0x558ba5480e89 in _start (/home/guest/src/blender/release/blender2.8/bin/blender+0x158fe89)
backtrace: ``` ==31845==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000028 (pc 0x558ba55adbd8 bp 0x7ffcd34a2fa0 sp 0x7ffcd34a2f90 T0) - 0 0x558ba55adbd7 in ED_space_image /home/guest/src/blender/blender/source/blender/editors/space_image/image_edit.c:60 - 1 0x558ba55bc0f9 in save_image_doit /home/guest/src/blender/blender/source/blender/editors/space_image/image_ops.c:1784 - 2 0x558ba55bdd66 in image_save_as_exec /home/guest/src/blender/blender/source/blender/editors/space_image/image_ops.c:2043 - 3 0x558ba54a451e in wm_handler_fileselect_do /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1856 - 4 0x558ba54a4eae in wm_handler_fileselect_call /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:1940 - 5 0x558ba54a5b04 in wm_handlers_do_intern /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2064 - 6 0x558ba54a67e9 in wm_handlers_do /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2207 - 7 0x558ba54a8027 in wm_event_do_handlers /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm_event_system.c:2480 - 8 0x558ba548b0ba in WM_main /home/guest/src/blender/blender/source/blender/windowmanager/intern/wm.c:489 - 9 0x558ba54819f5 in main /home/guest/src/blender/blender/source/creator/creator.c:525 - 10 0x7fc5088c72b0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x202b0) - 11 0x558ba5480e89 in _start (/home/guest/src/blender/release/blender2.8/bin/blender+0x158fe89) ```

That's so strange. The problem is because CTX_wm_space_image returns null (or rather, CTX_wm_area does it). I can't see what changed in 2.8 to justify that.

That's so strange. The problem is because **CTX_wm_space_image** returns null (or rather, **CTX_wm_area** does it). I can't see what changed in 2.8 to justify that.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Don't think it's that strange, every change anywhere in the code that somehow influences context can cause such issues. Typical bContext crap… Couldn't check code yet, but from backtrace it even looks a bit like something that only worked by accident before.
I can have a closer look later if you like?

Don't think it's that strange, every change anywhere in the code that somehow influences context can cause such issues. Typical bContext crap… Couldn't check code yet, but from backtrace it even looks a bit like something that only worked by accident before. I can have a closer look later if you like?
Julian Eisel was assigned by Dalai Felinto 2016-11-09 18:42:56 +01:00

I can have a closer look later if you like?

That would be great :)

> I can have a closer look later if you like? That would be great :)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Committed 82ba89b042.

Committed 82ba89b042.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49961
No description provided.